--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-/# spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/my-test-realm
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://fuzzy-guacamole-x9vj4qwx763v959-8180.app.github.dev/realms/my-test-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/my-test-realm
+# spring.security.oauth2.resourceserver.jwt.issuer-uri=https://fuzzy-guacamole-x9vj4qwx763v959-8180.app.github.dev/realms/my-test-realm
 logging.level.org.springframework.security=TRACE
